--- a/docs/Labs/Unused/UnusedLabTasks.Rmd
+++ b/docs/Labs/Unused/UnusedLabTasks.Rmd
@@ -5,6 +5,17 @@ date: "2024-08-26"
 output: html_document
 ---
 
+## Possible Scenario
+
+MONICA: UPDATE THIS: In this lab you'll be working with the following: In this investigation, researchers explored the association between adolescent life satisfaction and their parents’ marital transitions. Across two studies, they collected data on multiple measures, including age, adolescent gender, siblings and stepsiblings, primary caregiver, and overall life satisfaction. 
+
+Study 1
+In the first study, the researchers wanted to explore whether adolescent gender affected life satisfaction after their household merged with that of a stepparent. To investigate this question, they used a secondary dataset with measures of life satisfaction at multiple timepoints across adolescence. They created a sub-dataset with life satisfaction measured in the year before their primary caregiver married or moved in with their new partner and the year after their primary caregiver married or moved in with their new partner. They used the Students’ Life Satisfaction Scale (SLSS) to measure participants’ life satisfaction. Higher scores indicate greater life satisfaction. 
+Research Question 1 
+(a) Is there an association between timepoint (before or after the merging of households) and life satisfaction? (b) Is there an association between relationship with parents (CUSTODIAL AND NONCUSTODIAL) and life satisfaction? (c) Does the association between timepoint and life satisfaction differ depending on the relationship with the secondary parent?
+
+
+
 ## Identify Normal Distribution Thresholds 
 
 A normal distribution is a unimodal distribution of data in which observations fall symmetrically around the mean. Use the sliders to adjust the mean and standard deviation of the data to explore their effects on the shape of the distribution.   
